# coderoad-langgraph-workshop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
task1/: compare_approaches.py  sequential_chain.py  stateful_graph.py
task2/: stategraph_demo.py
task3/: nodes_demo.py
task4/: edges_routing_demo.py
task5/: loops_demo.py
task6/: tools_demo.py
task7/: memory_demo.py
task8/: research_assistant.py  streamlit_app.py
